<?xml version="1.0"?>
<package format="3">
  <name>nao_ros2</name>
  <version>0.1.0</version>
  <description>ROS2 package for handling and switching modes of the NAO robot</description>

  <maintainer email="andoniroldansandua@gmail.com">Antonio Roldan</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nao_lola_command_msgs</exec_depend>
  <exec_depend>biped_interfaces</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
